hdbscan bugs fixed

--- a/notes/unsupervised_learning_models.ipynb
+++ b/notes/unsupervised_learning_models.ipynb
@@ -82,9 +82,9 @@
     "\n",
     "Now that we have built $D$ we need to select our clusters, but since we have not fixed a density value in advance HDBSCAN attempts to make more local decisions about choices of density using something called stability, which gives us a numeric value which we can use to rank clusters. \n",
     "\n",
-    "We let $\\lambda(C)=\\frac{1}{d}$ where $d$ was the weight of the edges removed from $T$ when the cluster appeared in $\\mathcal{C}$. We set $\\lambda(X)=0$.\n",
-    " Then for $x \\in C$ we define $\\lambda_{x}(C)=\\lambda(C')$, where $C'$ is the child of $C$ containing $x$. Here we defined the stability of all clusters, not just the valid ones.\n",
-    "\n",
+    "Here we define the notion of stability only for clusters in the subtree $D'$ of $D$ that have size at least $m$.\n",
+    "We let $\\lambda(C)=\\frac{1}{d}$ where $d$ was the weight of the edges removed from $T$ when the cluster $C'$ $\\mathcal{C}$, where $C'$ is the lowest ancestor of $C$ with its children $C_1$ and $C_2$ satisfy $|C_1| \\geq m, |C_2| \\geq m$. We set $\\lambda(X)=0$.\n",
+    "Then for $x \\in C$ we define $\\lambda_{x}(C)=\\lambda(C')$, where $C', C''$ are the highest descendants of $C$ such that $x \\in C'$ and $|C'|, |C''| \\geq m$ or $|C'|< m$.\n",
     " Then the stability of $C$ is \n",
     "\n",
     " $$\n",
@@ -96,13 +96,13 @@
     "\n",
     "##### Cluster Selection\n",
     "<!-- Beginning with the solution containing the root cluster we replace a cluster $C$ with its children $C_1, \\dots, C_t$ if $\\sum_{j=1}^{t}\\text{stability}(C_j) > \\text{stability}(C)$. -->\n",
-    "HDBSCAN employs a cluster selection selection algorithm, here we discuss the default option called, Excess of Mass(EOM), where the excess-of-mass of a given cluster $C$ is denoted $\\text{EOM}(C)$ and is computed with the following recursive formula, where $C_1$ and $C_2$ are the children of $C$ (if $C$ is not a leaf):\n",
+    "HDBSCAN employs a cluster selection selection algorithm, here we discuss the default option called, Excess of Mass(EOM), where the excess-of-mass of a given cluster $C \\in D'$ is denoted $\\text{EOM}(C)$ and is computed with the following recursive formula, where $\\text{Ch}(C)$ is the set of children of $C$ in $D'$:\n",
     "\n",
     "$$ \\text{EOM}(C) = \n",
     "\\begin{cases}\n",
     "    0 & C \\text{ is a leaf}\\\\\n",
-    "    \\text{EOM}(C_1) + \\text{EOM}(C_2) & |C| < m\\\\\n",
-    "    \\max(\\text{stability}(C), \\text{EOM}(C_1) + \\text{EOM}(C_2)) & \\text{ otherwise}\n",
+    "    \\sum_{C' \\in \\text{Ch}(C)}\\text{EOM}(C') & |C| < m\\\\\n",
+    "    \\max(\\text{stability}(C), \\text{EOM}(C_1) + \\sum_{C' \\in \\text{Ch}(C)}\\text{EOM}(C')) & \\text{ otherwise}\n",
     "\\end{cases}\n",
     "$$\n",
     "\n",
